...

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recycler_posts"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:paddingTop="?attr/actionBarSize"
           android:clipToPadding="false"
           app:layout_behavior="@string/appbar_scrolling_view_behavior"
           app:postsAdapter="@{viewModel.postItemsLiveData}"
           tools:listitem="@layout/item_post"
           android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}" />

           <com.google.android.material.floatingactionbutton.FloatingActionButton
               android:id="@+id/floating_remove"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:useCompatPadding="true"
               android:layout_gravity="bottom|end"
               android:baselineAlignBottom="true"
               android:onClick="@{() -> viewModel.onRemoveDataClick()}"
...
