...
            android:text="@string/please_retry"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_between_views"
            android:background="@android:color/white"
...
